src/test/ui/nll/issue-52669.stderr
error[E0382]: borrow of moved value: `a.b`
  --> $DIR/issue-52669.rs:15:5
   |
LL |     foo(a);
   |         - value moved here
LL |     a.b.clone()
   |     ^^^ value borrowed here after move
   |
   = note: move occurs because `a` has type `A`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
